[gd_scene load_steps=4 format=3 uid="uid://bwst4slo578yk"]

[ext_resource type="Script" path="res://mats/UI/map/place/place.gd" id="1_gkxwn"]
[ext_resource type="Texture2D" uid="uid://bby8f0uw1txpg" path="res://mats/UI/map/imgs/zone.png" id="2_jsxuq"]

[sub_resource type="LabelSettings" id="LabelSettings_apmv3"]
resource_local_to_scene = true
font_size = 14
font_color = Color(3.12006e-06, 0.644557, 0.266582, 1)

[node name="pl0" type="Control" groups=["SN"]]
layout_mode = 3
anchors_preset = 0
offset_right = 16.0
offset_bottom = 16.0
script = ExtResource("1_gkxwn")
level = "res://mats/lvls/lvl1/lvl1_1.tscn"
unactive = 0.8
arena_color = Color(0.615422, 0.615422, 0.615422, 1)
player_color = Color(0.290262, 0.627879, 0.999997, 1)
boss_color = Color(0.890896, 0, 0.297433, 1)
shop_color = Color(2.40654e-07, 0.581352, 0.565908, 1)
secret_color = Color(0.412596, 0.00212651, 0.736014, 1)

[node name="visual" type="TextureRect" parent="."]
self_modulate = Color(0.492338, 0.492338, 0.492338, 1)
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_top = -1.2
anchor_right = 1.0
anchor_bottom = -0.2
offset_top = -0.799999
offset_bottom = -0.8
grow_horizontal = 2

[node name="arena" type="TextureRect" parent="."]
self_modulate = Color(0.615422, 0.615422, 0.615422, 1)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jsxuq")
expand_mode = 1
stretch_mode = 5

[node name="btn" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
flat = true
clip_text = true
icon_alignment = 1
expand_icon = true

[node name="nm" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -6.0
offset_right = 20.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
text = "pl0"
label_settings = SubResource("LabelSettings_apmv3")
horizontal_alignment = 1

[connection signal="runned_changed" from="." to="." method="_on_runned_changed"]
[connection signal="button_down" from="btn" to="." method="_on_button_down"]
